# MM_26_BB

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.ps1
apps/api/: bracket_api.py  main.py
apps/dashboard/: app.py  bracket.html  bracket_api.py  index.html  tournament.html
apps/worker/: scheduler.py
data/: model_calibration.json  player_schema.sql  schema.sql  tournament_schema.sql
data/reports/: quality_report_20251223.json
docs/: DATA_ANALYSIS.md  MODEL_ANALYSIS.md  PHD_METRICS_GUIDE.md  README.md  SPEC.md
predictions/tournament_2026/: advancement_probabilities.csv  best_bracket.json  best_bracket.md  championship_probs_v2.json  filled_bracket.csv  game_cards.json  sim_results.json
scripts/: check_db_state.py  daily_pipeline.py  fit_calibration.py  generate_quality_report.py  ingest_recent.py  init_tournament_schema.py  render_bracket.py  run_backtest.py  run_backtest_optimized.py  run_elite_tournament.py  run_enhanced_pipeline.py  run_full_tournament.py  run_march_madness.py  run_march_madness_v2.py  run_predictions.py  run_tournament_predictions.py  train_dynamic_model.py  train_gpu_model.py  update_dashboard.py  verify_live_data.py
tests/: conftest.py
tests/unit/: test_bracket_simulator.py  test_enhanced_predictor_anchoring.py  test_guardrails.py  test_kenpom_ratings_d1.py  test_model_calibration.py  test_possession.py  test_schemas.py  test_season.py  test_segments.py  test_tournament_bracket.py  test_tournament_score_bands.py
